server/kubernetes/bpow/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: boompow-ingress
  namespace: boompow
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: "boompow"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
spec:
  tls:
  - hosts:
    - bpow.appditto.com
    secretName: bpow-appditto-com-server-secret
  rules:
  - host: bpow.appditto.com
    http:
      paths:
      - path: /upcheck
        backend:
          serviceName: boompow
          servicePort: 5031
      - path: /service_ws
        backend:
          serviceName: boompow
          servicePort: 5035
      - path: /service
        backend:
          serviceName: boompow
          servicePort: 5030
